@@ -7,13 +7,10 @@ import com.awakening.app.game.Player;
 import com.awakening.app.game.Room;
 import com.awakening.app.game.RoomMap;
 import com.google.gson.Gson;
-import com.google.gson.internal.bind.util.ISO8601Utils;
-import org.w3c.dom.Text;
 
 import java.io.FileReader;
 import java.io.IOException;
 import java.io.Reader;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -30,7 +27,8 @@ public class Game {
     public static Player player = new Player();
     public static NPC npc = new NPC();
     private static final Prompter prompter = new Prompter(new Scanner(System.in));
-    private List<String> approvedItems = new ArrayList<>(Arrays.asList("camera", "cellphone", "key", "journal", "batteries", "file", "bandages", "bandages", "paper-clip"));
+    private List<String> approvedItems = new ArrayList<>(Arrays.asList("camera", "cellphone", "key", "journal", "batteries", "file", "bandages", "bandages", "paper-clip", "press-pass"));
+    private List<String> usableItems = new ArrayList<>(List.of("key-pad"));
     private UI ui = new UI();
     private TextParser textParser = new TextParser();
     private List<Room> rooms = new ArrayList<>();
@@ -120,7 +118,7 @@ public class Game {
     }
 
     private void printGameWon() {
-        String endText = null;
+        String endText;
         try{
             endText = Files.readString(Path.of("resources/ASCII/gameEnd.txt"));
             System.out.println(endText);
@@ -150,6 +148,13 @@ public class Game {
                     System.out.println(TextParser.RED + "Invalid command" + TextParser.RESET);
                 }
                 break;
+            case "use":
+                if (usableItems.contains(noun)){
+                    use(noun);
+                } else {
+                    System.out.println(TextParser.RED + "Cannot use that" + TextParser.RESET);
+                }
+                break;
             default:
                 System.out.println(TextParser.RED + "Invalid command" + TextParser.RESET);
         }
@@ -160,6 +165,8 @@ public class Game {
         RoomMap.RoomLayout nextRoom = world.getRoom(currentRoom.getDirections().get(direction));
         if (nextRoom == null) {
             System.out.println(TextParser.RED + "You can't go that way" + TextParser.RESET);
+        } else if (nextRoom.isLocked()) {
+            System.out.println(TextParser.RED + "The door is locked" + TextParser.RESET);
         } else {
             player.setCurrentRoom(nextRoom);
         }
@@ -169,7 +176,7 @@ public class Game {
         RoomMap.RoomLayout currentRoom = player.getCurrentRoom();
 
         if (noun.equals("ghost")) {
-            String npcName = currentRoom.getNpcName().toString();
+            String npcName = currentRoom.getNpcName();
             if (npcName == null) {
                 System.out.println("There is no ghost in this room");
                 return;
@@ -181,13 +188,13 @@ public class Game {
         } else if (noun.equals("map")) {
             ui.displayMap();
         } else if (approvedItems.contains(noun) && currentRoom.getItems().contains(noun)) {
-            String itemDesc = "";
+            String itemDesc;
             Item.ItemsSetup item = findItem(noun);
             assert item != null;
             itemDesc = item.getDescription();
             System.out.println(itemDesc);
         } else if (approvedItems.contains(noun) && player.printInventory().contains(noun)) {
-            String itemDesc = "";
+            String itemDesc;
             Item.ItemsSetup item = findItem(noun);
             assert item != null;
             itemDesc = item.getDescription();
@@ -199,7 +206,7 @@ public class Game {
 
     private void pickUp(String noun) {
         RoomMap.RoomLayout currentRoom = player.getCurrentRoom();
-        List itemList = player.getCurrentRoom().getItems();
+        List<String> itemList = player.getCurrentRoom().getItems();
 
         int index;
         Item.ItemsSetup item = findItem(noun);
@@ -217,6 +224,27 @@ public class Game {
             }
         } else {
             System.out.println(TextParser.RED + "Invalid command" + TextParser.RESET);
+        }
+    }
+
+    /**
+     * Provides functionality for use command from player.
+     * noun should be approved outside this method
+     *
+     * Method will need to be refactored if functionality goes beyond key-pad
+     *
+     * @param noun - approved usable noun
+     */
+    private void use(String noun) {
+        // Keypad image
+        String keyEntry = prompter.prompt("Enter PIN:");
+
+        if (keyEntry.equalsIgnoreCase("9537")) {
+            RoomMap.RoomLayout currentRoom = player.getCurrentRoom();
+            RoomMap.RoomLayout nextRoom = world.getRoom(currentRoom.getDirections().get("east"));
+
+            nextRoom.setLocked(false);
+            System.out.println("The key-pad chimes and turns green.");
         }
     }
 
@@ -258,9 +286,6 @@ public class Game {
             e.printStackTrace();
         }
 
-    }
-
-    private void startGame() {
     }
 }
 
